fix: make option toggle button smaller

--- a/frappe/public/scss/common/modal.scss
+++ b/frappe/public/scss/common/modal.scss
@@ -222,7 +222,7 @@ body.modal-open[style^="padding-right"] {
 			margin-bottom: -24px;
 			button {
 				// same as form-control input
-				height: calc(1.5em + .75rem + 2px);
+				height: calc(1.5em + .7rem);
 			}
 		}
 	}
